[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "hnecu_sphinx"
dynamic = ["version"]
description = "Sphinx extension for custom projects."
authors = [
  {name = "Mi Ramon"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'sphinx',
    'minify-html',
    'jsmin',
    'cssmin',
    'jinja2',
]
requires-python = ">=3.7"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ramonmi/hnecu_sphinx"
documentation = "https://github.com/ramonmi/hnecu_sphinx"
repository = "https://github.com/ramonmi/hnecu_sphinx"

[tool.setuptools.package-data]
hnecu_sphinx = [
    'banner.html',
    'banner.css',
    'banner.js',
    'dark_rtd.css',
]

[tool.setuptools_scm]

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "I", # isort
]
